--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
+    "@expo-google-fonts/source-sans-pro": "^0.2.3",
+    "expo": "^46.0.21",
+    "expo-app-loading": "~2.1.0",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react": "18.0.0",
+    "react-native": "0.69.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
