--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "@expo-google-fonts/source-sans-pro": "^0.2.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "expo": "^46.0.21",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.0.0",
-    "react-native": "0.69.9"
+    "react-native": "0.69.9",
+    "react-native-gesture-handler": "^2.11.0",
+    "react-native-reanimated": "^3.2.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
+    "react-router-dom": "^6.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
